[metadata]
name = pytest-blink1
author = Rotem Yaari
author-email = vmalloc@gmail.com
summary = Pytest plugin to emit notifications via the Blink(1) RGB LED
description-file = README.md
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Pytest
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: MIT License
[files]
packages =
    pytest_blink1
[entry_points]
pytest11=
    blink1 = pytest_blink1
